--- a/less/body.less
+++ b/less/body.less
@@ -63,6 +63,7 @@
     h2{
         padding: 5% 0;
         font-family: 'Concert One', cursive;
+        text-align: center;
     }//end h2
 }//end #event
 
@@ -229,6 +230,7 @@ button, input[type=submit]{
     h2{
         padding-bottom: 3%;
         font-family: 'Concert One', cursive;
+        text-align: center;
     }//end h2
 
     section{
